--- a/mysite/bill/templates/bill/reciept_form.html
+++ b/mysite/bill/templates/bill/reciept_form.html
@@ -3,10 +3,11 @@
 {% block content %}
   <form action="" method="post">
     {% csrf_token %}
+    {% load crispy_forms_tags %}
     <table>
-    {{ form.as_table }}
+    {{ form|crispy }}
     </table>
-    <input type="submit" value="Submit">
-    <input type="submit" onclick="window.location={% url 'bill:all' %}' ; return false;" value="Cancel">
+    <input type="submit" class="btn btn-primary" value="Submit">
+    <input type="submit" class="btn btn-secondary" onclick="window.location={% url 'bill:all' %}' ; return false;" value="Cancel">
   </form>
 {% endblock %}
